--- a/html-css-Exercice1.html
+++ b/html-css-Exercice1.html
@@ -6,8 +6,6 @@
   </head>
   <body>
     <h1>les fondamentaux au rugby</h1>
-    <p>
-      Le ballon doit toujours se transmettre, avec les mains en arrière.
-    </p>
+    <p>Le ballon doit toujours se transmettre, avec les mains en arrière.</p>
   </body>
 </html>
